--- a/.env.development
+++ b/.env.development
@@ -1,3 +1,3 @@
-REACT_APP_BACKEND_URL=http://11.0.0.100:5000/user
-REACT_APP_BACKEND_BASE_URL=http://11.0.0.100:5000
+REACT_APP_BACKEND_URL=http://hairtress.softapps.io/user
+REACT_APP_BACKEND_BASE_URL=http://hairtress.softapps.io
 REACT_APP_GOOGLE_MAP_PLACES_API=AIzaSyAH8ruf0bKTw4CnmokAOyfYntnRS-HVxys
